调试首页相关购物车操作的接口，完成分类所有界面

--- a/BuyVegetablesTreasure/Info.plist
+++ b/BuyVegetablesTreasure/Info.plist
@@ -271,5 +271,7 @@
 	<true/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleDefault</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
