--- a/BuyVegetablesTreasure/Info.plist
+++ b/BuyVegetablesTreasure/Info.plist
@@ -64,7 +64,9 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>000001</string>
+	<string>2</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>baidumap</string>
