--- a/BuyVegetablesTreasure/Info.plist
+++ b/BuyVegetablesTreasure/Info.plist
@@ -26,7 +26,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>wechat</string>
+			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>wx222566b6fdefe238</string>
