商品详情增加商品下架和补货中按钮，商品列表增加补货中状态水印，个人中心增加我的分享模块

--- a/BuyVegetablesTreasure/FS/Main/我的/Root/XFMe/Model/MeItems.plist
+++ b/BuyVegetablesTreasure/FS/Main/我的/Root/XFMe/Model/MeItems.plist
@@ -46,9 +46,15 @@
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>分享</string>
+		<string>我的分享</string>
 		<key>imageName</key>
 		<string>me_分享</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>我的二维码</string>
+		<key>imageName</key>
+		<string>me_二维码</string>
 	</dict>
 </array>
 </plist>
