我的分享增加加载loading

--- a/BuyVegetablesTreasure/Info.plist
+++ b/BuyVegetablesTreasure/Info.plist
@@ -120,6 +120,7 @@
 		<string>alipay</string>
 		<string>cydia</string>
 		<string>safepay</string>
+		<string>mqqopensdkapiV4</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
